# radarange-orchestrator

./: .gitignore  Readme.md  __init__.py  chat.py  llama_cpp_bindings.py  llm.py  llm_types.py  model.py  pyproject.toml
data/: Library.csv
examples/: chat.py  gpu_choice.py  list_models.py  lmstudio_attach_code_files.py  lmstudio_connect.py  lmstudio_gpu_choice.py  lmstudio_history.py  lmstudio_images_description.py  lmstudio_list_of_models.py  lmstudio_tool_docs.py  lmstudio_vlm.py  local_inference.py  multiple_tool_usage.py  reason_with_json.py  remote_backend.py  remote_inference.py  respond_with_json.py  search-download-readpdf.py  tool_usage.py
manager/: pyproject.toml
manager/manager/: manager.py  resources.py  service.py  utils.py
notebooks/: 04.28 prompt mining.ipynb  04.28 sandbox china cpt search copy 2.ipynb  04.28 sandbox china cpt search copy.ipynb  04.28 sandbox china cpt search.ipynb  05.06 sandbox patent retelling.ipynb  05.12 sandbox PV retelling.ipynb  05.13 Cavity enhanced work discussion.ipynb  05.28 bioinf exam sources download.ipynb  05.29 storage_md discussion.ipynb  06.01 QwQ vs Qwen3.ipynb  06.09 devstral.ipynb  07.09 retriever.ipynb  base.ipynb  infer.py  infer_with_dummy_tool.py  infer_with_tool.py  parse html links.ipynb  parse references.ipynb  pdf open.ipynb  sandbox copy.ipynb  sandbox eit retelling.ipynb  sandbox net chat new.ipynb  sandbox net chat old.ipynb  sandbox net chat.ipynb  sandbox net download.ipynb  sandbox net search copy.ipynb  sandbox net search.ipynb  sandbox pdf read.ipynb  sandbox pdf.ipynb  sandbox.ipynb  simple_tool.py  structured response.ipynb  what_time_is_it.ipynb
radarange_orchestrator/: __init__.py  _chat.py  chat.py  config.py  formatting.py  llm.py  llm_backend.py
radarange_orchestrator/backend/: generic_model.py  llama_cpp_bindings.py  llama_cpp_model.py  lmstudio_bindings.py  lmstudio_remote_model.py
radarange_orchestrator/chat/: __init__.py  chat.py  messages.py
radarange_orchestrator/retriever/: .env  docker-compose.yml  healthcheck.embedder.sh
radarange_orchestrator/tools/: __init__.py  base.py  code_writing_tool.py  download_file_tool.py  grammar_switch_tool.py  listdir_tool.py  net_scrape_tool.py  net_search_tool.py  pdf_parse_tool.py  time_tool.py  tool_annotation.py  tool_template.py
radarange_orchestrator/types/: history.py  llm_types.py  tools.py
radarange_orchestrator/utils/: __init__.py  display.py  doc_to_json.py  extract_tool_calls.py  find_model.py  is_list_of.py
radarange_orchestrator/workflows/: citations_workflow.py
services/llm/: README.md  pyproject.toml
services/llm/examples/: chat.py  gpu_choice.py  list_models.py  local_inference.py  multiple_tool_usage.py  reason_with_json.py  remote_inference.py  respond_with_json.py  tool_usage.py
services/llm/llm/: __init__.py
services/llm/llm/backend/: generic_model.py  llama_cpp_model.py  lmstudio_remote_model.py
services/llm/llm/chat/: __init__.py  chat.py
services/llm/llm/core/: __init__.py  config.py  formatting.py  llm.py  llm_backend.py
services/llm/llm/tools/: __init__.py  download_file_tool.py  listdir_tool.py  net_scrape_tool.py  net_search_tool.py  pdf_parse_tool.py  time_tool.py
services/llm/llm/tools/pdf/: models.py  parsing.py
services/llm/llm/utils/: __init__.py  display.py  extract_tool_calls.py
services/llm/models/: download_model.py
tools/: __init__.py  code_writing_tool.py  download_file_tool.py  grammar_switch_tool.py  listdir_tool.py  net_scrape_tool.py  net_search_tool.py  pdf_parse_tool.py  tool_annotation.py  tool_template.py
utils/: __init__.py  display.py  doc_to_json.py  download_model.py  extract_tool_calls.py  find_model.py  gpu-test.py  pretty_print.py
worflows/: citations_workflow.py
workflows/: citations_workflow.py
