[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "prefect>=3.4.8",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
[project.optional-dependencies]
dev = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
]

[tool.setuptools.packages.find]
where = ["manager"]
include = ["manager*"]
exclude = [".venv"]

[tool.ruff]
target-version = 'py312'
extend-include = ["*.ipynb"]
exclude = [
    '.git',
    '.ruff_cache',
    '.venv',
    'venv',
]

# Configure single quotes
[tool.ruff.format]
quote-style = 'single'
